# pyspeexaec

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  py_module.cpp  pyproject.toml  setup.py
speex/include/: config.h
speex/include/speex/: speex_buffer.h  speex_echo.h  speex_jitter.h  speex_preprocess.h  speex_resampler.h  speexdsp_config_types.h  speexdsp_types.h
speex/src/: CMakeLists.txt  _kiss_fft_guts.h  arch.h  bfin.h  buffer.c  fftwrap.c  filterbank.c  filterbank.h  fixed_arm4.h  fixed_arm5e.h  fixed_bfin.h  fixed_debug.h  fixed_generic.h  jitter.c  kiss_fft.c  kiss_fft.h  kiss_fftr.c  kiss_fftr.h  math_approx.h  mdf.c  misc_bfin.h  os_support.h  preprocess.c  pseudofloat.h  resample.c  resample_neon.h  resample_sse.h  scal.c  smallft.c  smallft.h  stack_alloc.h  vorbis_psy.h
src/: echo_canceller.cpp  echo_canceller.h
